# TrackRepublic

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
config/: classifier_prompt_template.txt  instrument_registry.csv  investment_asset_class_prompt_template.txt
scripts/: categorize_transactions.py  check_portfolio_returns.py  convert_trade_republic_statement.py  extract_pdf_text.mjs  prepare-desktop-bundle.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-placeholder/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/accounts/: page.tsx
src/app/api/assistant/: route.ts
src/app/api/categories/: route.ts
src/app/api/manual-transactions/: route.ts
src/app/assistant/: page.tsx
src/app/load-data/: page.tsx
src/app/operations/: page.tsx
src/app/portfolio/: page.tsx
src/app/settings/: page.tsx
src/app/spending/: page.tsx
src/app/transactions/: page.tsx
src/components/: accounts-dashboard.tsx  app-frame.tsx  assistant-chat.tsx  brand-logo.tsx  dashboard-ui.tsx  operations-dashboard.tsx  overview-dashboard.tsx  portfolio-dashboard.tsx  transactions-dashboard.tsx  trend-dashboard.tsx
src/lib/: accounts-data.ts  assistant-tools.ts  assistant-types.ts  category-config.ts  config-store.ts  dashboard-data.ts  dashboard-utils.ts  etf-lookthrough.ts  income-category-scope.ts  investment-asset-class.ts  investment-performance.ts  investment-positions.ts  live-quotes.ts  operations-data.ts  pipeline-jobs.ts  rule-matching.ts  runtime-paths.ts
(+6 files in other folders)
